tests/security/immutableClassTrackInputThroughMethod/output.txt
ERROR: TaintedData - input.hack:14:6 - Data from a URL query string found its way to an HTML tag